# BlockCrypt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
constants/: BlockCryptConstants.cpp  BlockCryptConstants.hpp
include/: CBC.hpp  blockcrypt.hpp  padding.hpp
src/: BlockCryptConstants.cpp  BlockCryptConstants.hpp  CBC.cpp  blockcrypt.cpp  blockcrypt.hpp  main.cpp  output  padding.cpp
tests/: CMakeLists.txt  benchmark_performance.cpp  test_blockcrypt.cpp
